<resources>
    <string name="app_name" translatable="false">EMDAC</string>
    <string name="structured">Structured</string>
    <string name="json">Json</string>
    <string name="action_vehicle_information">Vehicle information</string>
    <string name="action_configure">Configure</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_policy">Policy editor</string>
    <string name="action_logout">Logout</string>
    <string name="action_log">Log</string>
    <string name="action_preview">Preview</string>
    <string name="action_refill_tokens">Refill tokens</string>
    <string name="button_continue">Continue</string>
    <string name="button_register">Register</string>
    <string name="button_log_in">Log in</string>
    <string name="button_add_rule">Add rule</string>
    <string name="button_make_rule">Make rule</string>
    <string name="button_connect">Connect</string>
    <string name="button_create_command">Create new command</string>
    <string name="button_save">Save</string>
    <string name="button_add_new_command">Add new command</string>
    <string name="button_set">Set</string>
    <string name="button_delegate">Delegate</string>
    <string name="button_when">When</string>
    <string name="button_rule_granted">Granted</string>
    <string name="button_rule_denied">Denied</string>
    <string name="button_users">Users</string>
    <string name="button_actions">Actions</string>
    <string name="button_unlimited">Unlimited</string>
    <string name="button_one_time_only">One time only</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_ip_port">IP ADDRESS:PORT</string>
    <string name="hint_new_command">New command name</string>
    <string name="hint_json">JSON input</string>
    <string name="label_speed_limit">Max speed</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_radius">Radius</string>
    <string name="label_unit">Unit</string>
    <string name="label_from">From</string>
    <string name="label_until">Until</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_define_rule">Define rule</string>
    <string name="label_satisfy_type">Satisfy type</string>
    <string name="label_limit_by">Limit by</string>
    <string name="label_type_of_rule">Type of rule</string>
    <string name="label_rules">Rules</string>
    <string name="label_delegate_to">Delegate to</string>
    <string name="label_personal_info">Personal details</string>
    <string name="label_theme">Theme</string>
    <string name="label_protocol">Protocol</string>
    <string name="label_user">User</string>
    <string name="label_layer">Layer</string>
    <string name="label_actions">Actions</string>
    <string name="label_action">Action</string>
    <string name="label_cost">Cost</string>
    <string name="label_rules_optional">Rules (optional)</string>
    <string name="label_selected">%1$d selected</string>
    <string name="label_unknown_number_of_tokens">Unknown number of tokens</string>
    <string name="label_not_paid">NOT PAID</string>
    <string name="label_fee">Fee</string>
    <string name="label_num_of_executions">Number of executions</string>
    <string name="error_credentials">Please check your credentials are correct and try again.</string>
    <string name="start_engine">Start engine</string>
    <string name="command_lock">Lock</string>
    <string name="command_unlock">Unlock</string>
    <string name="command_open_trunk">Trunk access</string>
    <string name="command_honk">Honk</string>
    <string name="command_alarm_on">On</string>
    <string name="command_alarm_off">Off</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_vehicle_information">Vehicle information</string>
    <string name="pref_category_connection">Connection</string>
    <string name="pref_category_units">Units</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="pref_title_ip_address">IP address</string>
    <string name="pref_title_port_number">Port number</string>
    <string name="pref_title_protocol">Protocol</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_vehicle_information">Vehicle information</string>
    <string name="pref_title_temperature_unit">Temperature</string>
    <string name="pref_title_distance_unit">Distance</string>
    <string name="error_ip_port">The address you entered is not valid. The correct format is IP ADDRESS:PORT, for example 127.0.0.1:12200. Please try again.</string>
    <string name="select_action">Select the action</string>
    <string name="action_send">Send</string>
    <string name="api_response_success">Your command was successfully sent.</string>
    <string name="action_delegation">Delegation editor</string>
    <string name="log_type_server">Server</string>
    <string name="log_type_device">Device</string>
    <string name="log_type_mobile">Mobile</string>
    <string name="protocol_type_none">None</string>
    <string name="protocol_type_dac" translatable="false">DACv1.0</string>
    <string name="protocol_type_tiny" translatable="false">TinyEmbeddedv0.7</string>
    <string name="start_time">Start delegation time</string>
    <string name="end_time">End delegation time</string>
    <string name="error_not_connected">You cannot send commands if you are not connected. Please check the logs for the connection error and try again.</string>
    <string name="header_lock">Access</string>
    <string name="header_trunk">Trunk access</string>
    <string name="header_alarm">Alarm</string>
    <string name="action_clear_policy">Clear policy list</string>
    <string name="action_clear_users">Clear users</string>
    <string name="clear_policy">Are you sure you want to clear policy list?</string>
    <string name="clear_users">Are you sure you want to clear user list?</string>
    <string name="dialog_progress_executing">Executing</string>
    <string name="microphone_command_name">Voice command</string>
    <string name="unknown_command">Unknown command</string>
    <string name="unknown_action">Unknown</string>
    <string name="delete_command_question">Are you sure you want to delete this command?</string>
    <string name="something_wrong_happened">Something\'s wrong.\nTry again later.</string>
    <string name="msg_tcp_client_unable_to_connect">Unable to connect to vehicle.\nPlease check connection settings.</string>
    <string name="error_msg_no_actions_selected">Please select at least one action</string>
    <string name="error_msg_delegation_failed">Delegation request failed</string>
    <string name="error_msg_user_must_be_logged_in">User must be logged in</string>
    <string name="empty_string" />
    <string name="label_connect_to">Connect to</string>
    <string name="hint_ip_address">IP address</string>
    <string name="hint_port_number">Port number</string>
    <string name="error_msg_ip_address_empty">Please enter IP address</string>
    <string name="error_msg_ip_address_invalid">Please enter valid IP address</string>
    <string name="error_msg_ip_port_number_empty">Please enter port number</string>
    <string name="error_msg_ip_port_number_invalid">Please enter valid port number</string>
    <string name="error_msg_radius_invalid">Entered radius is invalid</string>
    <string name="error_msg_no_rules_added">Please add at least one rule</string>
    <string name="error_msg_no_users_selected">Please select at least one user</string>
    <string name="vd_ambient_air_temperature">Ambient air temperature</string>
    <string name="vd_fuel_tank_level">Fuel tank level</string>
    <string name="vd_central_locking_status_for_user_feedback">Central locking status for user feedback</string>
    <string name="vd_trunk_status">Trunk status</string>
    <string name="vd_driver_door_status">Driver door status</string>
    <string name="vd_driver_door_rear_status">Driver door rear status</string>
    <string name="vd_passenger_door_status">Passenger door status</string>
    <string name="vd_passenger_door_rear_status">Passenger door rear status</string>
    <string name="vd_requested_brake_torque_at_wheels">Requested brake torque at wheels</string>
    <string name="vd_requested_propulsion_torque">Requested propulsion torque</string>
    <string name="vd_clutch_pedal_position">Clutch pedal position</string>
    <string name="vd_brake_pedal_pressed">Brake pedal pressed</string>
    <string name="msg_press_back_again_to_discard">Press back again to discard changes, or press SAVE to save them.</string>
    <string name="msg_saving">Saving…</string>
    <string name="msg_saving_success">Successfully saved</string>
    <string name="msg_saving_failed">Unable to save</string>
    <string name="msg_logout">Do you want to log out?</string>
    <string name="msg_logging_in">Logging in…</string>
    <string name="msg_connecting">Connecting…</string>
    <string name="msg_registering">Registering…</string>
    <string name="msg_empty_username">Please enter your username</string>
    <string name="msg_empty_password">Please enter your password</string>
    <string name="msg_empty_first_name">Please enter your first name</string>
    <string name="msg_empty_last_name">Please enter your last name</string>
    <string name="msg_credentials_invalid">Entered credentials are invalid</string>
    <string name="msg_delegating">Delegating…</string>
    <string name="msg_delegating_success">Delegation request sent</string>
    <string name="msg_no_commands">There are no commands delegated to you.\nPlease contact vehicle owner.</string>
    <string name="msg_creating_new_command">Creating new command…</string>
    <string name="msg_command_name_empty">Please enter new command\'s name</string>
    <string name="msg_command_json_invalid">Your JSON format is not valid. Please correct it and try again.</string>
    <string name="msg_command_successfully_created">Command successfully created</string>
    <string name="msg_policy_list_clearing">Clearing policy list…</string>
    <string name="msg_policy_list_cleared_successfully">Policy list successfully cleared</string>
    <string name="msg_policy_list_cleared_error">Unable to clear policy list</string>
    <string name="msg_users_list_cleared_successfully">Users list cleared successfully</string>
    <string name="msg_empty_latitude">Please enter latitude</string>
    <string name="msg_empty_longitude">Please enter longitude</string>
    <string name="msg_empty_radius">Please enter radius</string>
    <string name="msg_empty_speed_limit">Please enter speed limit</string>
    <string name="msg_delete_rule_question">Do you want to delete this rule?</string>
    <string name="msg_refill_tokens_question">Do you want to refill your account with %s tokens?</string>
    <string name="msg_refilling_account">Refilling account…</string>
    <string name="msg_refilling_successful">Refilling successful. Please check your wallet in short time</string>
    <string name="msg_refilling_failed">Refilling failed. Please try again later</string>
    <string name="msg_action_not_paid_question">This action is not paid!\nDo you want to pay %s tokens for it?</string>
    <string name="msg_paying">Paying…</string>
    <string name="nav_menu_item_home">Home</string>
    <string name="nav_menu_log">Log</string>
    <string name="nav_menu_item_settings">Settings</string>
    <string name="nav_menu_item_log_out">Log out</string>
    <string name="nav_menu_item_delegation_editor">Delegation editor</string>
</resources>