<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  This file is part of the DAC distribution (https://github.com/xainag/frost)
  ~  Copyright (c) 2019 XAIN AG.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, version 3.
  ~
  ~  This program is distributed in the hope that it will be useful, but
  ~  WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~  General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@drawable/separation_line">

    <PreferenceCategory android:title="@string/pref_category_connection">

        <EditTextPreference
            android:theme="?attr/label_style"
            android:textColorHint="@color/red"
            android:defaultValue="192.168.3.1"
            android:key="pref_ip_address"
            android:title="@string/pref_title_ip_address"/>
        <EditTextPreference
            android:defaultValue="9998"
            android:dialogMessage="Value between 0 and 65535"
            android:key="pref_port_number"
            android:title="@string/pref_title_port_number" />
        <ListPreference
            android:entries="@array/protocol_types"
            android:entryValues="@array/protocol_types"
            android:key="pref_protocol"
            android:defaultValue="2"
            android:title="@string/label_protocol" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_appearance">

        <ListPreference
            android:key="pref_theme"
            android:title="@string/pref_title_theme" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_units"
        android:title="@string/pref_category_units"
        app:isPreferenceVisible="false">
        <ListPreference
            android:key="pref_temperature_unit"
            android:title="@string/pref_title_temperature_unit" />
        <ListPreference
            android:key="pref_distance_unit"
            android:title="@string/pref_title_distance_unit" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_category_vehicle_information"
        android:title="@string/pref_category_vehicle_information"
        app:isPreferenceVisible="false">

        <Preference
            android:fragment="com.de.xain.emdac.main.ui.VehicleInfoListFragment"
            android:title="@string/pref_title_vehicle_information" />
    </PreferenceCategory>
</PreferenceScreen>