<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  This file is part of the DAC distribution (https://github.com/xainag/frost)
  ~  Copyright (c) 2019 XAIN AG.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, version 3.
  ~
  ~  This program is distributed in the hope that it will be useful, but
  ~  WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~  General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_clear_policy"
        android:orderInCategory="103"
        android:title="@string/action_clear_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_users"
        android:orderInCategory="103"
        android:title="@string/action_clear_users"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_new_command"
        android:orderInCategory="104"
        android:title="@string/button_add_new_command"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refill_tokens"
        android:orderInCategory="105"
        android:title="@string/action_refill_tokens"
        app:showAsAction="never" />

</menu>