<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  This file is part of the DAC distribution (https://github.com/xainag/frost)
  ~  Copyright (c) 2019 XAIN AG.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, version 3.
  ~
  ~  This program is distributed in the hope that it will be useful, but
  ~  WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  ~  General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.de.xain.emdac.delegation.DelegationViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/label_delegate_to"
                    style="?attr/separation_label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_delegate_to" />

                <Button
                    android:id="@+id/button_users"
                    style="?attr/button_1_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/button_users" />

                <TextView
                    android:id="@+id/label_actions"
                    style="?attr/separation_label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_action" />

                <Button
                    android:id="@+id/button_actions"
                    style="?attr/button_1_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/button_actions" />

                <TextView
                    style="?attr/separation_label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_fee" />

                <Spinner
                    android:id="@+id/spinner_cost"
                    style="?attr/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:selectedItemPosition="@={viewModel.selectedCostIndex}" />

                <TextView
                    style="?attr/separation_label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_num_of_executions" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/button_unlimited"
                        android:theme="?attr/radio_button_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_unlimited" />

                    <RadioButton
                        android:id="@+id/buttonOneTimeOnly"
                        android:theme="?attr/radio_button_theme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_one_time_only" />
                </RadioGroup>

                <TextView
                    android:id="@+id/label_rules"
                    style="?attr/separation_label_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_rules_optional" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rules_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <!--<Button-->
                <!--android:id="@+id/button_rules_enabled"-->
                <!--style="?attr/button_1_style"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:text="@string/button_rule_granted" />-->

                <!--<Button-->
                <!--android:id="@+id/button_rules_disabled"-->
                <!--style="?attr/button_1_style"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:text="@string/button_rule_denied" />-->

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/separator_line_color"
            app:layout_constraintBottom_toTopOf="@+id/button_delegate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_delegate"
            style="?attr/button_1_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_delegate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>