<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  This file is part of the Frost distribution
  ~  (https://github.com/xainag/frost)
  ~
  ~  Copyright (c) 2019 XAIN AG.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="346dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="?attr/separation_label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_connect_to" />

            <LinearLayout
                style="?attr/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="0dp"
                android:paddingBottom="5dp"
                android:weightSum="5">

                <EditText
                    android:id="@+id/text_ip_address"
                    style="?attr/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="3"
                    android:hint="@string/hint_ip_address"
                    android:inputType="text"
                    tools:ignore="Autofill,RtlHardcoded" />

                <EditText
                    android:id="@+id/text_ip_port_number"
                    style="?attr/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/hint_port_number"
                    android:inputType="number"
                    android:maxLength="4"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <TextView
                style="?attr/separation_label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_protocol" />

            <Spinner
                android:id="@+id/spinner_protocol"
                style="?attr/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                style="?attr/separation_label_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_theme" />

            <Spinner
                android:id="@+id/spinner_theme"
                style="?attr/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/separator_line_color"
            app:layout_constraintBottom_toTopOf="@+id/button_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_save"
            style="?attr/button_1_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>